code smells replacement